# olympus

./: .gitignore  .gitmodules  Makefile  compile_flags.txt  meson.build  meson_options.txt
.cache/clangd/index/: hello.c.989364BEDDC4543A.idx
make/: config.mk  x86_64-llvm.mk
protos/: bootstrap.idl  meson.build  posix.idl  vfs.idl
src/: build.mk  crt0.S  gaia.c  gaia.h  meson.build
src/bootstrap/: bootstrap.c  build.mk  meson.build
src/hello/: build.mk  hello.c  meson.build
src/posix/: exec.c  meson.build  posix.c
src/posix/fs/: fd.c  meson.build  tar.c  tmpfs.c  vfs.c
src/posix/include/: vec.h
src/posix/include/fs/: fd.h  tar.h  tmpfs.h  vfs.h
src/posix/include/posix/: dirent.h  errno.h  fcntl.h  fnctl.h  posix.h  proc.h  stat.h  types.h
src/vfs/: meson.build  vfs.c
